# bento_test

./: board_bringup.md  platformio.ini
dfu_test/: platformio.ini  trigger_dfu.py
dfu_test/include/: util.h
dfu_test/src/: main.cpp  util.cpp
full_test_firmware/: platformio.ini
full_test_firmware/include/: CustomHardwareSerial.h  util.h
full_test_firmware/src/: CustomHardwareSerial.cpp  main.cpp  stm32g431cb_configs.cpp  util.cpp
full_test_firmware/src/SimpleCAN/: BaseCAN.h
full_test_firmware/src/SimpleCAN/stm/fdcan/: CAN.cpp  CAN.h
full_test_runner/: pyproject.toml
full_test_runner/full_test_runner/: __main__.py
include/: util.h
src/: main.cpp  util.cpp
stm32cubemx/simplefoc_bento_v1/: simplefoc_bento_v1.ioc
